--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
-  <meta content="" name="description">
+  <title>Ruquaiya Altaf</title>
+  <meta content="A UI/UX maestro with Innovative Interfaces, Unmatched Experiences" name="description">
   <meta content="ruqiaiya, ruquaiya altaf, portfolio, profile" name="keywords">
 
   <!-- Favicons -->
