--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Ruquaiya Altaf</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>A<span> UI/UX maestro</span> with Innovative Interfaces, Unmatched Experiences</h2>
+      <h2>A<span> UI/UX Designer</span> with a passion for making Tech delightful</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -644,9 +644,7 @@
     </div>
   </section><!-- End Contact Section -->
 
-  <div class="credits">
-    Developed by <a href="https://ahmadrazza2001.github.io/ahmadraza/">Ahmad</a>
-  </div>
+ 
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
