--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Ruquaiya Altaf</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>A<span> UI/UX Designer</span> with a passion for making Tech delightful</h2>
+      <h2>A<span> Project Coordinator </span> Turning Your Plan into Progress with Precision & Passion.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,15 +84,15 @@
           <img src="assets/img/portfolio/ruquaiya-1.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>A UI/UX maestro</h3>
+          <h3>Project Coordinator</h3>
           <p class="fst-italic">
-            As a Figma expert, I bring creativity and precision to every UI/UX design, crafting user experiences that truly stand out.
+            As a Project Coordinator, I turn vision into action, ensuring seamless success through strategy and collaboration.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>01-01-2002</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ruquaiyaaltaf.vercel.app/index.html</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 3164931844</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lahore, Pakistan</span></li>
               </ul>
@@ -107,8 +107,7 @@
             </div>
           </div>
           <p>
-            I’ve always been passionate about all aspects of design and and I have 3 years of experience in user interfaces, graphic design mobile app design,dashboard,Real Estate,, commerce Ul Design prototyping and whipping up stunning wire frames.
-            I have a natural curiosity that always pushes me to explore, investigate and learn what I don’t know. This is also reflected in my personality as a designer: I consider myself a perfectionist. However, I love looking into new corners of design. As a consequence, my design approach has always been guided by an eternal dichotomy between divergent and convergent thinking, artistic attitude and scientific method, creative mess and obsession with details.Figma is my playground.
+           I have always been passionate about bringing structure and efficiency to complex projects. With three years of experience in coordinating teams, managing timelines, and ensuring seamless execution, I thrive on turning ideas into actionable results. My natural curiosity drives me to explore innovative solutions, optimize workflows, and adapt to challenges with a problem-solving mindset. Balancing strategy with precision, I bridge the gap between vision and execution, ensuring projects stay on track and deliver impact. Organization is my craft, collaboration is my strength, and success is my ultimate goal.
           </p>
         </div>
       </div>
@@ -175,14 +174,14 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Photoshop <i class="val">90%</i></span>
+            <span class="skill"> ClickUp <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Illustrator <i class="val">75%</i></span>
+            <span class="skill">Jira <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -193,7 +192,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Wireframing <i class="val">80%</i></span>
+            <span class="skill">Skype <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
