--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Ruquaiya Altaf</title>
-  <meta content="A UI/UX maestro with Innovative Interfaces, Unmatched Experiences" name="description">
+  <meta content="Turning Your Plan into Progress with Precision & Passion" name="description">
   <meta content="ruqiaiya, ruquaiya altaf, portfolio, profile" name="keywords">
 
   <!-- Favicons -->
