--- a/index.html
+++ b/index.html
@@ -284,8 +284,7 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Working with Ruquaiya was an absolute pleasure! Her exceptional talent in UI/UX design truly shone through in every aspect of our project. She demonstrate a deep understanding of user needs and come up with amazing ideas.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+Working with Ruquaiya was an absolute pleasure! Her expertise in project coordination ensured seamless execution from start to finish. She demonstrated exceptional organizational skills, kept everything on track, and fostered strong collaboration among teams. Her strategic approach and problem-solving mindset made a significant impact on our project's success                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/1.jpg" class="testimonial-img" alt="">
               <h3>Abdul Rehman</h3>
@@ -298,8 +297,7 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Ruquaiya was an absolute delight! Her outstanding talent in UI/UX design was evident in every phase of our project. She displayed a profound understanding of user needs. Her creativity truly made a difference in our project's success.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+"Ruquaiya was an absolute delight to work with! Her exceptional skills as a Project Coordinator ensured smooth execution at every stage. She displayed remarkable organization, clear communication, and a keen ability to keep teams aligned. Her dedication and problem-solving mindset made a real difference in our project's success."                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/2.jpg" class="testimonial-img" alt="">
               <h3>Zunnurain Hussain</h3>
@@ -335,7 +333,7 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Ruquaiya Altaf</h4>
-            <p><em>Expert in Figma, Delivering Exceptional UI/UX Designs with Precision and Creativity.</em></p>
+            <p><em>"Expert in Project Coordination, Driving Success with Strategy, Organization, and Seamless Execution.".</em></p>
             <p>
             <ul>
               <li>Lahore, Pakistan</li>
@@ -357,31 +355,35 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>UI-UX Designer</h4>
+            <h4>Coordinator Designer</h4>
             <h5>June 2022 - Aug 2023</h5>
             <p>
             <ul>
-              <li>Work as UI UX designer. Learn to work with team, communication sills and how to work smartly.</li>
+              <li>Team Collaboration – Work closely with stakeholders, ensuring seamless communication between teams. Use tools like Asana, Trello, or Jira to streamline workflows.
+
+Communication Skills – Clearly convey project goals, timelines, and expectations. Facilitate meetings, provide updates, and resolve conflicts effectively.
+
+Working Smartly – Prioritize tasks, manage risks, and optimize processes for efficiency. Leverage automation and project management tools to enhance productivity..</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Poster Designer</h4>
+            <h4>Project Coordinator</h4>
             <h5>Jan 2020 - Dec 2023</h5>
             <p>
             <ul>
-              <li>It was an online job.
-                <li>My main responsibility was to make posters of update news on Instagram.</li>
+              <li>At DHA Lahore Mian campus
+                <li>"As a Project Coordinator at DHA Lahore, my main responsibility was to oversee project timelines, streamline communication, and ensure smooth execution of tasks, keeping all stakeholders aligned for successful project delivery."</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Figma Designer</h4>
+            <h4>Project coordinator</h4>
             <h5>Jan 2023 - Present</h5>
             <p>
             <ul>
-              <li>It is remote base job. my responsibility is to make websites mobile application, SAAS Dashboard.</li>
-              <li>My main focus is to make animation in it..</li>
+              <li>"Project Coordinator at ZNZ Communication, managing the SAMC Limited project, ensuring seamless execution, team collaboration, and timely delivery."</li>
+              <li>My main focus is to deliver all my deliverables on Time and make sure the integration of Frontend and Backend</li>
             </ul>
             </p>
           </div>
